fix: add width 100% to nav-drawer-body on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -2342,6 +2342,7 @@ button {
     gap: 22px;
     padding: 24px 12px 28px 4px;
     flex: 1;
+    width: 100%;
     overflow-y: auto
   }
 
